Updated Margin for CTA to var

--- a/packages/react/src/Bento/Bento.module.css
+++ b/packages/react/src/Bento/Bento.module.css
@@ -120,7 +120,7 @@
 
 .Bento__call-to-action {
   justify-content: inherit;
-  margin-top: 24px;
+  margin-top: var(--base-size-24);
 }
 
 .Bento__call-to-action--fixed {
