Add hasborder and hasshadow

--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -3,8 +3,6 @@
   text-decoration: none;
   color: var(--brand-color-text-default);
   background-color: var(--brand-Card-background-default);
-  border: var(--brand-borderWidth-thin) solid var(--brand-color-border-default);
-  box-shadow: var(--brand-Card-shadow);
   /* Temporary values until a new scale is defined https://github.com/github/primer/issues/2607 */
   border-radius: var(--base-size-16);
   padding: var(--base-size-32);
@@ -47,7 +45,15 @@
   inset: 0;
 }
 
-.Card--has-icon {
+.Card--shadow {
+  box-shadow: var(--brand-Card-shadow);
+}
+
+.Card--border {
+  border: var(--brand-borderWidth-thin) solid var(--brand-color-border-default);
+}
+
+.Card--icon {
   grid-template-areas:
     'image image'
     'icon label'
@@ -56,12 +62,12 @@
     'action action';
 }
 
-.Card--has-icon .Card__label {
+.Card--icon .Card__label {
   justify-self: flex-end;
 }
 
-.Card--has-icon .Card__label,
-.Card--has-icon .Card__icon {
+.Card--icon .Card__label,
+.Card--icon .Card__icon {
   align-self: center;
 }
 
@@ -107,7 +113,7 @@
 }
 
 .Card__description {
-  margin-bottom: var(--base-size-48);
+  margin-bottom: var(--base-size-32);
   grid-area: description;
 }
 
@@ -116,6 +122,11 @@
   margin-top: auto;
   display: inline-flex;
   align-items: center;
+}
+
+.Card__action,
+.Card__action span {
+  color: var(--brand-Link-color-accent);
 }
 
 .Card__icon svg {
