Updated namespace modifier for no-fill

--- a/packages/react/src/Bento/Bento.module.css
+++ b/packages/react/src/Bento/Bento.module.css
@@ -87,7 +87,7 @@
   object-fit: cover;
 }
 
-.Bento__Visual-no-fill > img {
+.Bento__Visual--no-fill > img {
   height: 100%;
   width: 100%;
   object-fit: contain;
