Updated Bento Max Width

--- a/packages/react/src/Bento/Bento.module.css
+++ b/packages/react/src/Bento/Bento.module.css
@@ -5,6 +5,7 @@
   grid-auto-rows: var(--base-size-80);
   grid-gap: var(--brand-Bento-gap-small);
   position: relative;
+  max-width: var(--brand-breakpoint-xlarge);
 }
 
 .Bento__Item {
