--- a/packages/react/src/recipes/FeaturePreviewLPs/FeaturePreviewLevelTwo/FeaturePreviewLevelTwo.module.css
+++ b/packages/react/src/recipes/FeaturePreviewLPs/FeaturePreviewLevelTwo/FeaturePreviewLevelTwo.module.css
@@ -27,6 +27,8 @@
 .FeaturePreview__ctaBanner {
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: var(--brand-borderRadius-large);
+  overflow: hidden;
 }
 
 .FeaturePreview__heroImageContainer img {
