--- a/packages/react/src/FAQ/FAQGroup.module.css
+++ b/packages/react/src/FAQ/FAQGroup.module.css
@@ -15,7 +15,11 @@
 }
 
 .FAQ__subheading {
-  margin-bottom: var(--base-size-16);
+  margin-block-end: var(--base-size-16);
+}
+
+.FAQGroup__panel-subHeading {
+  margin-block-start: calc(var(--base-size-8) + 1px);
 }
 
 .FAQGroup__tablist .FAQ__heading {
