--- a/packages/react/src/Accordion/Accordion.module.css
+++ b/packages/react/src/Accordion/Accordion.module.css
@@ -4,17 +4,16 @@
 }
 
 .Accordion--default {
-  border-bottom: var(--brand-borderWidth-thin) solid var(--brand-color-border-default);
+  border-bottom: var(--brand-borderWidth-thin) solid var(--brand-Accordion-border-color-default);
 }
 
 .Accordion--emphasis:not(.Accordion .Accordion) > .Accordion__summary {
-  border-bottom: var(--brand-borderWidth-thicker) solid var(--brand-color-border-default);
-  margin-block-end: var(--base-size-12);
+  border-bottom: var(--brand-borderWidth-thicker) solid var(--brand-Accordion-border-color-emphasis);
 }
 
 .Accordion--default::after {
   content: '';
-  border: 3px solid var(--brand-color-border-default);
+  border: 3px solid var(--brand-Accordion-border-color-default);
   height: 0;
   transition: var(--brand-animation-duration-fast) transform;
   transform: scaleY(0);
@@ -143,8 +142,11 @@ details[open] > .Accordion__summary.Accordion__summary--default .Accordion__summ
 
 details[open] > .Accordion__content {
   padding-bottom: var(--base-size-24);
-  margin-top: calc(var(--base-size-16) * -1); /* for 8px gap between question and answer */
   animation: fade-in 0.5s;
+}
+
+.Accordion__summary--default + .Accordion__content {
+  margin-top: calc(var(--base-size-16) * -1); /* for 8px gap between question and answer */
 }
 
 details[open] > .Accordion__summary--reversed-toggles + .Accordion__content {
