--- a/packages/react/src/Bento/Bento.features.stories.module.css
+++ b/packages/react/src/Bento/Bento.features.stories.module.css
@@ -2,15 +2,56 @@
   background: linear-gradient(90deg, var(--base-color-scale-purple-5) 0%, var(--base-color-scale-purple-6) 100%);
 }
 
+.customStatNumber {
+  font-size: var(--base-size-80);
+  margin-bottom: var(--base-size-20);
+}
+
+@media screen and (min-width: 48rem) {
+  .customStatNumber {
+    font-size: var(--base-size-112);
+  }
+}
+
+@media screen and (max-width: 48rem) {
+  .Mixed1__codeWindow {
+    object-position: 20% 80% !important;
+  }
+}
+
+.Mixed2__heading1 {
+  max-width: 650px;
+}
+
+.Mixed2__item {
+  grid-gap: var(--base-size-16);
+}
+
+.Mixed2__testingImageVisual {
+  overflow: initial;
+}
+
 .Mixed3 {
   background-color: #f9f8f6;
 }
 
-.Mixed3__bento {
+@media screen and (min-width: 64rem) {
+  .Mixed3__customColumns {
+    grid-template-columns: 0.9fr 1.1fr;
+  }
+}
+
+.Mixed3__leadingImageVisual {
+  overflow: initial;
+}
+
+.bentoImageBg {
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .Mixed3__image {
   opacity: 0.8;
+  height: auto;
+  width: 100%;
 }
